--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Inferno Smp</title>
+      <title>Inferno Network</title>
       <meta http-equiv = "refresh" content = "0; url = https://discord.gg/X8SnnDGRxt" />
    </head>
 </html>
