--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
    <head>
       <title>Inferno Network</title>
-      <meta http-equiv = "refresh" content = "0; url = https://discord.gg/X8SnnDGRxt" />
+      <meta http-equiv = "refresh" content = "0; url = https://discord.gg/qnNzpTQGB6" />
    </head>
 </html>
